:hocho: socket split and room test
